Fix paginator not wrapping controls

--- a/src/app/components/pages/statistics/statistics.component.scss
+++ b/src/app/components/pages/statistics/statistics.component.scss
@@ -22,5 +22,5 @@
   }
   
   .demo-paginator {
-    width: 600px;
+    max-width: 600px;
   }
